syntax = "proto3";
package internal;

message File {
  string Key = 1;
  string Value = 2;
  string Desc = 3;
  int64 CreateTime = 4;
  string FileMD5 = 5;
  int64 FileSize = 6;
}